peac_dev/force-app/main/default/objects/Rate_Card_Column__c/Rate_Card_Column__c.object-meta.xml
<CustomObject>
    <label>Rate Card Column</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Card Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Card Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>