peac_dev/force-app/main/default/objects/Rate_Card_Column__c/fields/Column_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Column_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The set of conditions used to determine if the transaction meets the criteria of the column.</inlineHelpText>
    <label>Column Criteria</label>
    <referenceTo>TCRE__Rule_Config__c</referenceTo>
    <relationshipLabel>Rate Card Columns</relationshipLabel>
    <relationshipName>Rate_Card_Columns</relationshipName>
    <type>Lookup</type>
</CustomField>