peac_dev/force-app/main/default/objects/Rate_Card_Column__c/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <label>Rate Card</label>
    <referenceTo>RateCard__c</referenceTo>
    <relationshipLabel>Rate Card Columns</relationshipLabel>
    <relationshipName>Rate_Card_Columns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>